[package]
name = "internet-packet"
description = "A minimal IPv4/IPv6/TCP/UDP parser"
version = "0.1.0"
license = "MIT"
authors = [
    "Maximilian Hils <cargo@maximilianhils.com>",
]
repository = "https://github.com/mhils/internet-packet"
edition = "2021"
rust-version = "1.65.0"

[features]
checksums = ["internet-checksum"]

[dependencies]
internet-checksum = { version = "0.2.1", optional = true }

[dev-dependencies]
data-encoding = "2.3.3"
